update nft card image classname

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="card">
-        <img class="nft-image" src="images/image-equilibrium.jpg" alt="Equilibrium image">
+        <img class="nft-card-image" src="images/image-equilibrium.jpg" alt="Equilibrium image">
         <div class="img-overlay"><img src="./images/icon-view.svg"> </div>
         <h2>Equilibrium #3429</h2>
         <p> Our Equilibrium collection promotes balance and calm.</p>
